# splitgif

./: LICENSE  Main.hs  README.md  splitgif.cabal
